--- a/index.html
+++ b/index.html
@@ -10,37 +10,99 @@
     <main>
         <div id="preloader">
             <div id="content">
-                <img src="media/kong-logo-preloader.svg" alt="image">
+                <img src="media/kong-logo-preloader.svg" alt="preloader_image">
                 <div id="slider"></div>
                 <p>loading...</p>
             </div>
         </div>
 
-        <div id="hero">
-            <video src="media/opening_video.mp4" autoplay muted loop loading="lazy"></video>
+        <nav>
+            <div id="navleft">
+                <img id="logoimage" src="media/kong-logo-preloader.svg" alt="">
+                <img src="media/Social-tiktok.webp" alt="">
+                <img src="media/Social-insta.webp" alt="">
+                <img src="media/Social-yt.webp" alt="">
+            </div>
+            <div id="navmid">
+                <img src="media/Home-btn.svg" alt="">
+                <div id="nav_menu">
+                <p>Wholesale</p>
+                <p>Vision & Mission</p>
+                <p>About Us</p>
+                <p>FAQs</p>
+                </div>
+                <img src="media/Cart-btn.svg" alt="">
+            </div>
+            <button>Shop Now <img src="media/toalet-icon.png" alt="toalet-icon"></button>
+            <button id="playbtn"><img src="media/play-icon.svg" alt="play-icon"></button>
+            <div id="scrollerbtn"><img src="media/scroll_btn.svg" alt="scroll_btn"></div>
+        </nav>
+
+        <div class="scrolling-div" id="hero">
+            <video src="media/opening_video.mp4" autoplay muted loop brightness="0.3"></video>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="content">
+            <div class="wrm" id="wr1">
+                <img src="media/a.png" alt="shadow1">
+                <h1>"kong's bamboo, <br> your eco choice"</h1>
+            </div>
+            <div class="wrm" id="wr2">
+                <img src="media/aa.png" alt="shadow2">
+                <h1>Ride the wave <br> of Change</h1>
+                <p>Kong's eco-friendly choice <br>dissolves into nature</p>
+            </div>
+            <div class="wrm" id="wr3">
+                <img src="media/aaa.png" alt="shadow3">
+                <h1>"Strength in <br> every sheet"</h1>
+            </div>
+            <div class="wrm" id="wr4">
+                <img src="media/aaaa.png" alt="shadow4">
+                <h1>Elevate Your <br> Throne</h1>
+                <p>Kong's delivers unmatched luxury <br>for discerning comfort</p>
+            </div>
+            <div class="wrm" id="wr5">
+                <img src="media/aaaaa.png" alt="shadow5">
+                <h1>Embrace eco- <br> luxury anywhere </h1>
+                <p>Kong's offers global shipping and <br> expertise 3-5 days delivery</p>
+            </div>
+            <div class="wrm" id="wr6">
+                <img src="media/aaaaa.png" alt="shadow6">
+                <h1>100% premium <br> bamboo paper</h1>
+            </div>
+            <div class="wrm" id="wr7">
+                <h1>save the planet one sheet at a time</h1>
+            </div>
+            <div class="wrm" id="wr8">
+                <h1>SAVE THE WORLD</h1>
+                <img src="media/aaaaaaa.webp" alt="footer_monkey" loading="lazy">
+                <div id="footer">
+                    <div id="footer_up">
+                        <a href="#home">shipping</a>
+                        <a href="#home">Return Policy</a>
+                        <a href="#home">........................................................</a>
+                        <a href="#home">Support</a>
+                    </div>
+                    <div id="footer_down">
+                        <p>@copyright 2024 kong's bamboo</p>
+                        <div id="footer_icons">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
+
+
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </body>
 </html>
