build better but not 100%

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 
     <div class="scrolling-div" id="hero">
-        <video src="media/opening_video.mp4" autoplay muted loop brightness="0.3"></video>
-    </div>
+<!--         <video src="media/opening_video.mp4" autoplay muted loop brightness="0.3"></video>
+ -->    </div>
 
     <div class="content">
         <div class="wrm" id="wr1">
